# cbdi

./: .gitignore  CITATION.cff  LICENSE  README.md  applications_research.md  benchmark_cbdi.py  cbrmc_paper.tex  pyproject.toml
benchmarks/: benchmark_cbdi.py
cbdi/: __init__.py
cbdi/core/: construction.py  errors.py  invariant.py  syndrome.py
examples/: quickstart.py
paper/: paper.latex
tests/: test_invariant.py
